--- a/backend/package.json
+++ b/backend/package.json
@@ -2,18 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "type": "module", //nodejs und nicht commonjs
-  "main": "server.js",//einstigspunkt für node
+  "type": "module",
+  "main": "server.js",
   "author": "",
   "license": "ISC",
   "scripts": {
-    "dev": "node server.js", //startet den server
-    "start": "node server.js",//startet den server
-    "migrate": "prisma migrate dev",//prisma migration um daten in db zu übertagen
-    "generate": "prisma generate",//generiert prisma client
-    "studio": "prisma studio",//startet prisma studio (gui für db)
-    "test:e2e": "playwright test",//führt playwrigth end zu end tests durch
-    "test:e2e:ui": "playwright test --ui"//end zu end tests mit gui
+    "dev": "node server.js",
+    "start": "node server.js",
+    "migrate": "prisma migrate dev",
+    "generate": "prisma generate",
+    "studio": "prisma studio",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
