--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,29 @@
     "generate": "prisma generate",
     "studio": "prisma studio",
     "test:e2e": "playwright test",
-    "test:e2e:ui": "playwright test --ui"
+    "test:e2e:ui": "playwright test --ui",
+    "test:unit": "vitest run tests/unit",
+    "test": "npm run test:unit"
   },
   "dependencies": {
     "@prisma/client": "^6.14.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^5.1.0",
-    "swagger-ui-express": "^5.0.1",
     "node-fetch": "^3.3.2",
-    "dotenv": "^16.4.5"
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@playwright/test": "^1.47.2",
+    "jsdom": "^26.1.0",
     "prisma": "^6.14.0",
-    "@playwright/test": "^1.47.2"
+    "vitest": "^3.2.4"
+  },
+  "vitest": {
+    "test": {
+      "environment": "jsdom",
+      "include": ["tests/unit/**/*.test.js"],
+      "exclude": ["tests/assignment.test.js"]
+    }
   }
 }
